
Version 0.3.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: modular key management (first step)
 * Paranoia: key list uses move-to-front transform
 * Paranoia: A pop-up at the end and status messages while generating new keys
 * Paranoia: '/otp reload' command added to regenerate the key list

Version 0.2.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Check libpurple and glib minor version number in configure
 * Cleaned and enhanced the make system
 * Paranoia: Support for multiple key files per conversation
 * Paranoia: Use the new libotp api (set/get and config)
 * Paranoia: Key settings are resetted if a buddy goes offline
 * Paranoia: '/otp list' and '/otp list-all' added to list available keys
 * Paranoia: no more request messages for offline buddies
 * Paranoia: add generated key to the key list

Christian Wäckerlin:
 * Libotp: System of error syndromes (OtpError) implemented
 * Libotp: otp_encrypt, otp_decrypt, otp_encrypt_warning are now transactional
 * Libotp: getter/setter system, struct otp is now private
 * Libotp: otp_conf system implemented, libotp is multi-application aware
 * Libotp keeps filehandles and mmap open to save CPU cycles.
 * Libotp locks the keyfiles that are in use.
 * Libotp: A tailing minimal padding is added to the messages on encryption 
   (and also random length padding) (allows future feature without breakage 
   of the spec.)
 * Debian/Ubuntu package support added
 * New otptester added

Pascal Sachs:
 * Libotp: Create and integrate the threaded key-generator
 * Libotp: Support for loop key creation
 * Libotp: Add a signal for the key generation status


Version 0.1.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: Basic plugin structure, libotp API
 * A build system 'from hell'! (but it seems to work)
 * Session and key management documentation